--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,4 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer>
+    <p>Página web hecha por Michely Paredes como parte de la evaluación continua de la asignatura "HTML y CSS II" del
+        Máster en Desarrollo Web con la UOC.</p>
 </footer>
