--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -5,53 +5,244 @@
 body {
   display: flex;
   flex-direction: column;
+  margin: 0 10rem;
+  font-family: $font-family-montserrat;
+  font-size: 1rem;
+  line-height: 1.6rem;
+  background-color: $background;
+  // border: 1px solid rgb(157, 28, 28);
+}
+
+.start-section {
   height: 100vh;
-  margin: 0;
-  padding: 2rem;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
 }
 
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.navbar {
+  padding: 2rem 0;
+
+  .navbar__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+
+    .navbar__item {
+      display: inline;
+      position: relative;
+
+      .navbar__link {
+        color: $secundary-color;
+        text-decoration: none;
+        padding: 1rem 2rem;
+      }
+
+      .navbar__link:hover {
+        font-weight: bold;
+      }
+    }
+  }
 }
 
-.uoc-logo {
+.navbar__dropdown {
+  display: none;
+  position: absolute;
+  background-color: #d4d4d4;
+  padding: 0.5rem;
+  list-style: none;
+  z-index: 1;
+
+  .navbar__dropdown-item {
+    margin: 0.5rem;
+  }
+
+  .navbar__dropdown-link {
+    display: block;
+    color: $text-color;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+  }
+
+  .navbar__dropdown-link:hover {
+    font-weight: bold;
+  }
+}
+
+.navbar__item:hover .navbar__dropdown {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
+}
 
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
+.welcome-message {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 80vh;
+
+  .welcome-message__text {
+    flex: 0.3;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    h2 {
+      font-size: 3.5rem;
+      color: $primary-color;
+      line-height: 0.8;
+      margin: 1rem 0;
+    }
+
+    .welcome-message__button {
+      background-color: $primary-color;
+      font-family: $font-family-montserrat;
+      font-weight: 600;
+      color: white;
+      padding: 1rem 3rem;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin: 1rem 0;
+    }
+
+    .welcome-message__button:hover {
+      background-color: #000000;
+    }
+  }
+  .welcome-message__image {
+    flex: 0.7;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .welcome-message__image img {
+    max-width: 100%;
+    height: auto;
   }
 }
 
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
+.collserola-section {
+  height: 100vh;
+  // border: 1px solid rgb(142, 0, 0);
 
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
+  .collserola-section__title {
+    font-size: 2rem;
+    color: $primary-color;
+    margin-bottom: 2rem;
+  }
+
+  .collserola-section__content {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .collserola-section__text {
+    flex: 1;
+    color: $text-color;
+    h3,
+    h4 {
+      color: $primary-color;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      i {
+        margin: 0.5rem;
+      }
+    }
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 1rem;
+    }
+  }
+
+  .collserola-section__images {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      img {
+        width: 70%;
+        height: auto;
+        border-radius: 0.5rem;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      }
+    }
   }
 }
 
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
-  text-align: center;
+.ciutadella-section {
+  height: 100vh;
+  // border: 1px solid rgb(142, 0, 0);
+
+  .ciutadella-section__title {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 2rem;
+    color: $primary-color;
+    margin-bottom: 2rem;
+  }
+
+  .ciutadella-section__content {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .ciutadella-section__images {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      padding-top: 1rem;
+      img {
+        width: 80%;
+        height: auto;
+        border-radius: 0.5rem;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+
+  .ciutadella-section__text {
+    flex: 1;
+    color: $text-color;
+    h3,
+    h4 {
+      color: $primary-color;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      i {
+        margin: 0.5rem;
+      }
+    }
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 1rem;
+    }
+  }
 }
+
+// .uoc-footer {
+//   margin-top: 1.5rem;
+//   font-size: 0.75rem;
+//   text-align: center;
+// }
