erase string-quotes rules from stylelint

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -98,7 +98,7 @@ body {
       background-color: $primary-color;
       font-family: $font-family-montserrat;
       font-weight: 600;
-      color: white;
+      color: #ffff;
       padding: 1rem 3rem;
       border: none;
       border-radius: 10px;
