--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,4 +1,12 @@
 <footer>
-    <p>Página web hecha por Michely Paredes como parte de la evaluación continua de la asignatura "HTML y CSS II" del
-        Máster en Desarrollo Web con la UOC.</p>
+    <div class="footer-content">
+        <p>Página web realizada por Michely Paredes, sin ánimo de lucro, con fines educativos y como actividad evaluable
+            de
+            la asignatura "Herramientas HTML&CSS II" del Máster en Desarrollo de Sitios y Aplicaciones Web de la UOC.
+        </p>
+        <p>
+            El contenido textual se ha redactado con Inteligencia Artificial y las imágenes pertenecen a sus respectivas
+            organizaciones. <br /> Los recursos visuales pertenecen a Freepik.
+        </p>
+    </div>
 </footer>
