--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -12,7 +12,6 @@ main {
   font-size: 1rem;
   line-height: 1.6rem;
   background-color: $background;
-  // border: 1px solid rgb(157, 28, 28);
 }
 
 .start-section {
@@ -22,13 +21,13 @@ main {
 .navbar {
   padding: 2rem 10rem;
   position: fixed;
-  // z-index: 1000;
   background-color: #ffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   font-family: $font-family-montserrat;
   font-size: 1rem;
   line-height: 1.6rem;
   width: 100vw;
+  z-index: 1;
 
   .navbar__list {
     list-style: none;
@@ -137,7 +136,6 @@ main {
 
 .section-a {
   height: 100vh;
-  // border: 1px solid rgb(142, 0, 0);
 
   .section-a__title {
     font-size: 2rem;
@@ -194,7 +192,6 @@ main {
 
 .section-b {
   height: 100vh;
-  // border: 1px solid rgb(142, 0, 0);
 
   .section-b__title {
     display: flex;
@@ -277,7 +274,7 @@ main {
       flex: 1;
       padding: 2rem;
       border-radius: 8px;
-      background-color: #dbdbdb;
+      background-color: #ececec;
 
       ul {
         padding-left: 1.5rem;
@@ -309,11 +306,10 @@ main {
     position: absolute;
     top: 5300;
     z-index: 1;
-  }
-
-  .image-container-end img {
-    width: 40%;
-    height: auto;
+    .image-end {
+      width: 40%;
+      height: auto;
+    }
   }
 }
 
