--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -330,3 +330,35 @@ footer {
     padding: 2rem;
   }
 }
+
+@media (max-width: 768px) {
+  main {
+    margin: 0 2rem;
+  }
+  .navbar {
+    padding: 1rem 2rem;
+  }
+  .navbar__list {
+    flex-direction: column;
+    align-items: center;
+  }
+  .welcome-message {
+    flex-direction: column;
+    .welcome-message__text,
+    .welcome-message__image {
+      flex: 1;
+      width: 100%;
+    }
+    h2 {
+      font-size: 2rem;
+    }
+  }
+  .section-a__content,
+  .section-b__content {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  footer {
+    width: 100%;
+  }
+}
